--- a/app/views/talksphere/_navigation.html.erb
+++ b/app/views/talksphere/_navigation.html.erb
@@ -1,21 +1,17 @@
 <div class="ui inverted segment">
-  <div class="ui inverted secondary small pointing menu">
+  <div class="ui container inverted secondary small pointing menu">
     <a class="item">
       Home
     </a>
     <a class="item">
       Messages
     </a>
-    <a class="item">
-      Friends
-    </a>
     <div class="right menu">
       <div class="ui dropdown item">
-        Language <i class="dropdown icon"></i>
+        Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">English</a>
-          <a class="item">Russian</a>
-          <a class="item">Spanish</a>
+          <a class="item">Sign In</a>
+          <a class="item">Settings</a>
         </div>
       </div>
       <div class="item">
