start building UI index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
   <%= render 'talksphere/navigation' %>
-  <div class="ui container">
+  <div class="ui fluid container">
     <%= yield %>
   </div>
   </body>
