--- a/app/views/talksphere/_navigation.html.erb
+++ b/app/views/talksphere/_navigation.html.erb
@@ -1,5 +1,5 @@
 <div class="ui inverted segment">
-  <div class="ui container inverted secondary small pointing menu">
+  <div class="ui inverted secondary small pointing stackable attached menu">
     <a class="item">
       Home
     </a>
