--- a/app/views/talksphere/index.html.erb
+++ b/app/views/talksphere/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome</h1>
+<h2 class="ui center aligned icon header">
+  <i class="circular inverted violet conversation icon"></i>
+  TalkSphere
+</h2>
