start creating UI for login page and migrate to sass

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+$primaryColor: #333333
+$secondaryColor: #1B1C1D
+
+body
+  background: $primaryColor
+  width: 100%
+
+.section-p1
+  padding: 40px
+
+.section-p2
+  padding: 80px
+
+.section-m1
+  margin: 40px
+
+.section-m2
+  margin: 80px
+
