--- a/app/views/talksphere/index.html.erb
+++ b/app/views/talksphere/index.html.erb
@@ -1,4 +1,3 @@
-<h2 class="ui center aligned icon header">
-  <i class="circular inverted violet conversation icon"></i>
-  TalkSphere
-</h2>
+<section id="main">
+  
+</section>
