--- a/app/views/talksphere/_navigation.html.erb
+++ b/app/views/talksphere/_navigation.html.erb
@@ -1,8 +1,6 @@
 <div class="ui inverted segment">
-  <div class="ui inverted secondary small pointing stackable attached menu">
-    <a class="item">
-      Home
-    </a>
+  <div class="ui inverted secondary pointing stackable attached menu">
+    <%= link_to 'Home', root_path, class: 'item' %>
     <a class="item">
       Messages
     </a>
@@ -10,7 +8,7 @@
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Sign In</a>
+          <%= link_to 'Login', login_path, class: 'item' %>
           <a class="item">Settings</a>
         </div>
       </div>
