add divider for login form

--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -15,6 +15,7 @@
       <% end %>
     </div>
   </div>
+  <div class="divider"></div>
   <div class="signup-card">
      <p>Don't have an account?  <a href="#">Sign up</a></p>
   </div>
