--- a/app/assets/stylesheets/session/new.sass
+++ b/app/assets/stylesheets/session/new.sass
@@ -1,7 +1,7 @@
 #sign-body
   display: flex
   flex-direction: row
-  justify-content: space-around
+  justify-content: space-evenly
   height: 80vh
   border-radius: 10px
   background: #1B1C1D
@@ -66,6 +66,11 @@
           border-radius: .6vw
           background-color: rgba(138, 115, 255, 0.4)
           box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px
+
+  .divider
+    height: 100%
+    width: 1px
+    border-right: grey solid 1px
 
   .signup-card
     display: flex
