auth user login and index ui

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,9 +16,11 @@
 
 $primaryColor: #333333
 $secondaryColor: #1B1C1D
+$fontColor: #DADADA
 
 body
   background: $primaryColor
+  color: $fontColor
 
 .section-p1
   padding: 40px
@@ -31,3 +33,11 @@ body
 
 .section-m2
   margin: 80px
+
+.pos100
+  width: 100%
+
+.divider
+  height: 100%
+  width: 1px
+  border-right: grey solid 1px
