--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,3 @@
-<p><strong><%= message.user.username %>: </strong><%= message.body %></p>
+<div class="message">
+  <p><strong><%= message.user.username %>: </strong><%= message.body %></p>
+</div>
