--- a/app/views/talksphere/_navigation.html.erb
+++ b/app/views/talksphere/_navigation.html.erb
@@ -8,13 +8,19 @@
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <%= link_to 'Login', login_path, class: 'item' %>
-          <a class="item">Settings</a>
+          <% if logged_in? %>
+            <%= link_to "Logout", logout_path, class: "item", method: :delete %>
+            <a class="item">Settings</a>
+          <% else %>
+            <%= link_to 'Log In', login_path, class: 'item' %>
+          <% end %>
         </div>
       </div>
-      <div class="item">
-        <div class="ui inverted violet button ">Sign Up</div>
-      </div>
+      <% unless logged_in? %>
+        <div class="item">
+          <div class="ui inverted violet button ">Sign Up</div>
+        </div>
+      <%  end %>
     </div>
   </div>
 </div>
