--- a/app/views/talksphere/index.html.erb
+++ b/app/views/talksphere/index.html.erb
@@ -1,15 +1,1 @@
-<section id="main">
-  <div class="side-section">
-    <% @user.each do |user| %>
-        <div class="user-card pos100">
-          <p><%= user.username %> <span>Joined <%= time_ago_in_words(user.created_at) %> ago</span></p>
-        </div>
-    <% end %>
-  </div>
-  <div class="divider"></div>
-  <div class="main-section">
-    <div class="chatterbox">
-      <%= render @message %>
-    </div>
-  </div>
-</section>
+<h1 class="container-fluid">asdasd welcome</h1>
