--- a/app/views/talksphere/_navigation.html.erb
+++ b/app/views/talksphere/_navigation.html.erb
@@ -1,26 +1,1 @@
-<div class="ui inverted segment">
-  <div class="ui inverted secondary pointing stackable attached menu">
-    <%= link_to 'Home', root_path, class: 'item' %>
-    <a class="item">
-      Messages
-    </a>
-    <div class="right menu">
-      <div class="ui dropdown item">
-        Account <i class="dropdown icon"></i>
-        <div class="menu">
-          <% if logged_in? %>
-            <%= link_to "Logout", logout_path, class: "item", method: :delete %>
-            <a class="item">Settings</a>
-          <% else %>
-            <%= link_to 'Log In', login_path, class: 'item' %>
-          <% end %>
-        </div>
-      </div>
-      <% unless logged_in? %>
-        <div class="item">
-          <div class="ui inverted violet button ">Sign Up</div>
-        </div>
-      <%  end %>
-    </div>
-  </div>
-</div>
+<%= link_to "Log In", login_path %>
