--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,8 +1,7 @@
 <% flash.each do |message_type, message_content| %>
-  <div class="ui <%= message_type %> message transition">
-    <i class="close icon"></i>
-    <div class="header">
+  <article class=<%= message_type == "alert" ? "alert" : "success" %>>
+    <div>
       <%= message_content %>
     </div>
-  </div>
+  </article>
 <% end %>
