--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,18 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= render 'talksphere/navigation' %>
-      <%= render 'layouts/messages' %>
-    <%= yield %>
+    <%= render 'layouts/navigation' %>
+    <div class="container-fluid">
+      <div class="flex-col">
+        <%= render 'layouts/messages' %>
+      </div>
+      <%= render 'layouts/theme' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
