--- a/app/views/talksphere/index.html.erb
+++ b/app/views/talksphere/index.html.erb
@@ -2,7 +2,7 @@
   <div class="main-message-box">
     <article class="messages-field"><%= render @messages %></article>
   </div>
-  <%= form_with(model: @message) do |f| %>
+  <%= form_with(model: @message, remote: true) do |f| %>
       <div class="main-respond-box flex-row">
       <%= f.text_field :body, placeholder: '...', id: 'message-content' %>
       <%= f.button '<span class="material-symbols-outlined">send</span>'.html_safe, class: "send-btn flex-row" %>
