furn off text input autocomplete

--- a/app/views/talksphere/index.html.erb
+++ b/app/views/talksphere/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <%= form_with(model: @message, remote: true) do |f| %>
       <div class="main-respond-box flex-row">
-      <%= f.text_field :body, placeholder: '...', id: 'message-content' %>
+      <%= f.text_field :body, placeholder: '...', id: 'message-content', autocomplete: false %>
       <%= f.button '<span class="material-symbols-outlined">send</span>'.html_safe, class: "send-btn flex-row" %>
       </div>
   <% end %>
